[gd_scene load_steps=7 format=3 uid="uid://bjmdbk30ebfj"]

[ext_resource type="Script" uid="uid://cr50jbl2u0xii" path="res://entities/player/player.gd" id="1_symyc"]
[ext_resource type="PackedScene" uid="uid://dbippw4rrlm31" path="res://components/player_input_syncronizer_component.tscn" id="2_abrql"]
[ext_resource type="Texture2D" uid="uid://3py6iwcewkd5" path="res://entities/player/player-medium.png" id="3_sglur"]
[ext_resource type="Texture2D" uid="uid://rm3uk3fjgcyp" path="res://entities/player/rifle.png" id="4_bls4j"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_abrql"]
properties/0/path = NodePath(".:global_position")
properties/0/spawn = true
properties/0/replication_mode = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_symyc"]

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_symyc")

[node name="PlayerInputSyncronizerComponent" parent="." node_paths=PackedStringArray("aim_root") instance=ExtResource("2_abrql")]
aim_root = NodePath("../WeaponRoot")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_abrql")

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("3_sglur")
centered = false
offset = Vector2(-9, -10)

[node name="WeaponRoot" type="Node2D" parent="."]
position = Vector2(0, -8)

[node name="Sprite2D" type="Sprite2D" parent="WeaponRoot"]
texture = ExtResource("4_bls4j")
centered = false
offset = Vector2(-14, -6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CircleShape2D_symyc")
